<resources>
    <string name="app_name">乾</string>

    <string name="common_delete">删除</string>
    <string name="common_add">添加</string>

    <string name="home_title_desc">请选择功能,点击后跳转至对应功能页</string>
    <string name="check_in_guide">请选择下方一项功能进行执行</string>
    <string name="check_in_execute">执行</string>
    <string name="check_in_detail_edit">详情</string>
    <string name="check_in_default_name">这是默认签到名</string>
    <string name="check_in_detail_name">任务名</string>
    <string name="check_in_detail_package">包名</string>
    <string name="test_text">添加</string>

    <string name="cmd_step_type_desc">操作类型</string>
    <string name="cmd_detail_update">更新</string>
    <string name="cmd_node_viewtype">点击控件类型</string>
    <string name="cmd_node_text">点击文本</string>
    <string name="cmd_node_id">点击id</string>
    <string name="cmd_node_desc">点击描述文本</string>
    <string name="cmd_node_positionX">点击x坐标</string>
    <string name="cmd_node_positonY">点击y坐标</string>

    <string name="wb_back_to_top">回到顶部</string>
    <string name="wb_copy_link">复制链接</string>
    <string name="wb_open_browser">在浏览器中打开</string>
    <string name="wb_close_page">关闭页面</string>
</resources>
