<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckinDetailActivity">

    <TextView
        android:id="@+id/check_in_detail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/check_in_detail_name_et"
        android:text="@string/check_in_detail_name"/>

    <EditText
        android:id="@+id/check_in_detail_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/check_in_detail_name_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/check_in_detail_package_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_in_detail_name_label"
        app:layout_constraintBottom_toBottomOf="@id/check_in_detail_pack_et"
        android:text="@string/check_in_detail_package"/>

    <EditText
        android:id="@+id/check_in_detail_pack_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/check_in_detail_package_label"
        app:layout_constraintTop_toBottomOf="@id/check_in_detail_name_et"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/check_in_cmd_rv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/check_in_detail_pack_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cmd_control_ll"
        />


    <LinearLayout
        android:id="@+id/cmd_control_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/cmd_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_add"/>

        <Button
            android:id="@+id/cmd_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_detail_update"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>